MOSIP-28809: Captcha alignment fix in login and register page

--- a/keycloak-artemis/theme/mosip/login/resources/css/login.css
+++ b/keycloak-artemis/theme/mosip/login/resources/css/login.css
@@ -139,14 +139,15 @@ div.kc-logo-text span {
     display: none;
 }
 .g-recaptcha {
-    transform:scale(0.77);
-    -webkit-transform:scale(1.24);
-    transform-origin:0 0;
-    -webkit-transform-origin:0 0;
+    transform:scale(1.27);
+    transform-origin:left;
     height: 105px;
+    padding-top: 10px;
 }
 div.form-group.login-pf-settings{
     display: block;
+    position: relative;
+    z-index: 1;
 }
 #kc-header {
     color: #ededed;
